force-app/main/default/objects/Integration_Mapping__c/Integration_Mapping__c.object-meta.xml
<CustomObject>
    <label>Integration Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>