force-app/main/default/objects/Integration_Mapping__c/fields/Account_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>