force-app/main/default/objects/Integration_Mapping__c/fields/Condition_2__c.field-meta.xml
<CustomField>
    <fullName>Condition_2__c</fullName>
    <label>Condition 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>notequals</fullName>
                <isActive>false</isActive>
                <label>notequals</label>
            </value>
            <value>
                <fullName>startswith</fullName>
                <isActive>false</isActive>
                <label>startswith</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>