force-app/main/default/objects/Integration_Mapping__c/fields/Condition_4__c.field-meta.xml
<CustomField>
    <fullName>Condition_4__c</fullName>
    <label>Condition 4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>