force-app/main/default/objects/Integration_Mapping__c/fields/CXM_Channel__c.field-meta.xml
<CustomField>
    <fullName>CXM_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CXM Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>