force-app/main/default/objects/Integration_Mapping__c/fields/Field_Condition_3__c.field-meta.xml
<CustomField>
    <fullName>Field_Condition_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Condition 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>