force-app/main/default/objects/Integration_Mapping__c/fields/Field_For_Log__c.field-meta.xml
<CustomField>
    <fullName>Field_For_Log__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field For Log</label>
    <length>50</length>
    <type>Text</type>
</CustomField>