force-app/main/default/objects/Integration_Mapping__c/fields/Field_Value_4__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Value 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>